packages/errors/test/_ava-ses-0-18-3.config.js
export default {
  require: ['ses0.18.3'],
  files: ['test/**/*.test0-18-3.*'],
  timeout: '2m',
};
